plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.akin.wallet'
    compileSdk {
        version = release(37)
    }

    defaultConfig {
        applicationId "com.akin.wallet"
        minSdk 24
        targetSdk 37
        versionCode 1
        versionName "1.0"


    }

    buildTypes {
        release {
            optimization {
                enable false
            }
        }
    }
    buildFeatures {
        buildConfig = true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.biometric
    implementation libs.constraintlayout
    implementation libs.material
    implementation libs.sqlcipher
    implementation libs.androidx.sqlite

}